<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bl1"
    tools:context="com.gmail.aiub.refat.offlinemap.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_position"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_mapPosition"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendance"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_attendance"
            android:layout_margin="10dp"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_report"
            android:layout_margin="10dp"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_notes"
            android:layout_margin="10dp"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_attendance"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_emergencyAttendance"
            android:layout_margin="10dp"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_sync"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/btn_dataSync"
            android:layout_margin="10dp"
            android:textColor="@color/btnText"
            android:background="@drawable/btn_shape"
            />
    </LinearLayout>

</RelativeLayout>
