<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bl1"
    tools:context="com.gmail.aiub.refat.offlinemap.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_userName"
            android:hint="@string/user_name"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edt_text_style"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_password"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edt_text_style"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btnLogin"
                android:layout_weight=".5"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textColor="@color/btnText"
                android:background="@drawable/btn_shape"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:layout_weight=".5"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:id="@+id/btnExit"
                android:textColor="@color/btnText"
                android:background="@drawable/btn_shape"/>
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
